@@ -24,6 +24,7 @@ libdrm_amdgpu.so.1 libdrm-amdgpu1 #MINVER#
  amdgpu_cs_wait_semaphore@Base 2.4.67
  amdgpu_device_deinitialize@Base 2.4.63
  amdgpu_device_initialize@Base 2.4.63
+ amdgpu_get_marketing_name@Base 2.4.73
  amdgpu_query_buffer_size_alignment@Base 2.4.63
  amdgpu_query_crtc_from_id@Base 2.4.63
  amdgpu_query_firmware_version@Base 2.4.63
