@@ -28,6 +28,7 @@ libdrm_freedreno.so.1 libdrm-freedreno1 #MINVER#
  fd_ringbuffer_del@Base 0
  fd_ringbuffer_emit_reloc_ring@Base 0
  fd_ringbuffer_emit_reloc_ring_full@Base 2.4.70
+ fd_ringbuffer_flush2@Base 2.4.73
  fd_ringbuffer_flush@Base 0
  fd_ringbuffer_grow@Base 2.4.70
  fd_ringbuffer_new@Base 0
