@@ -59,6 +59,9 @@ libdrm_intel.so.1 libdrm-intel1 #MINVER#
  drm_intel_gem_bo_clear_relocs@Base 2.4.27
  drm_intel_gem_bo_context_exec@Base 2.4.36
  drm_intel_gem_bo_get_reloc_count@Base 2.4.27
+ drm_intel_gem_bo_map__cpu@Base 2.4.73
+ drm_intel_gem_bo_map__gtt@Base 2.4.73
+ drm_intel_gem_bo_map__wc@Base 2.4.73
  drm_intel_gem_bo_map_gtt@Base 2.4.3
  drm_intel_gem_bo_map_unsynchronized@Base 2.4.32
  drm_intel_gem_bo_start_gtt_access@Base 2.4.3
