@@ -126,6 +126,7 @@ libdrm.so.2 libdrm2 #MINVER#
  drmModeObjectGetProperties@Base 2.4.36
  drmModeObjectSetProperty@Base 2.4.36
  drmModePageFlip@Base 2.4.17
+ drmModePageFlipTarget@Base 2.4.73
  drmModeRmFB@Base 2.4.3
  drmModeSetCrtc@Base 2.4.3
  drmModeSetCursor2@Base 2.4.46
