@@ -1,6 +1,8 @@
 libdrm (2.4.73-1) UNRELEASED; urgency=medium
 
   * New upstream release.
+  * Bump libdrm2's, libdrm-amdgpu1's, libdrm-freedreno1's and libdrm-
+    intel1's symbols and shlibs.
   * Update a bunch of URLs in packaging to https.
 
  -- Andreas Boll <andreas.boll.dev@gmail.com>  Thu, 03 Nov 2016 12:13:24 +0100
